getting temperature and humidity info

--- a/tessel-webserver-demo/static/index.html
+++ b/tessel-webserver-demo/static/index.html
@@ -28,7 +28,7 @@
       $.ajax({
         type: "GET",
         url: '/leds/' + index,
-        success: function() { console.log('led ' + index + ' toggled'); },
+        success: function() { console.log('led ' + index + ' toggled'); }
       });
     }
   </script>
